--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <title>Document</title>
+    <script src="/assets/js/app.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <button onclick="onoff()">test</button>
+    <img src="/assets/img/pic_bulboff.gif" alt="" id="bulb">
+    
+  </body>
 </html>
+
+
+
